--- a/styles.css
+++ b/styles.css
@@ -1060,13 +1060,7 @@ body {
         margin-bottom: 0;
     }
     .system-integration-item-right {
-        border: 1px solid #e2e8f0;
-        display: flex;
-        align-items: center;
-        gap: 0.8rem;
-        transition: all 0.3s ease;
-        position: relative;
-        margin-top: 1rem;
+        width: 100%;
     }
     
     .table-row {
