--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
 body {
     font-family: 'Inter', 'Avenir', 'Avenir Next', 'Helvetica Neue', Arial, sans-serif;
     line-height: 1.6;
@@ -37,7 +40,8 @@ body {
     align-items: center ;
     padding: 2rem 2rem 0 ;
     width: 100% ;
-}
+    z-index: 1000;
+    }
 
 .nav-content {
     font-size: 1.4rem ;
@@ -67,6 +71,7 @@ body {
     text-decoration: none;
     font-weight: 500;
     border-radius: 25px;
+    padding: 0.2rem;
     background: transparent;
 }
 
@@ -556,7 +561,7 @@ body {
 .header-cell {
     padding: 1.5rem 2rem;
     border: 1px solid #e2e8f0;
-    font-size: 1.4rem;
+    font-size: 1rem;
     font-weight: 500;
     color: #64748b;
     line-height: 1.4;
